k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: google-serp
  labels:
    app: google-serp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: google-serp
  template:
    metadata:
      labels:
        app: google-serp
    spec:
      containers:
        - name: google-serp
          image: olivier86/google-serp:latest
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "0.75Gi"
              cpu: "750m" # 0.75 CPU
            limits:
              memory: "1Gi"
              cpu: "1000m" # 1 CPU
          readinessProbe:
            httpGet:
              path: /api/search?q=test&pages_nb=1
              port: 3001
            initialDelaySeconds: 90
            periodSeconds: 60
            timeoutSeconds: 30
