k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: google-serp-service
spec:
  selector:
    app: google-serp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP # Internal load balancer
